--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <html>
-	<body>
-		<h1>Titre cassé<h1/>
+  <body>
+    <h1>
+      Titre cassé
+      <h1 />
 
-		<p>nouvelle phrase<p/>
-	<body/>
-<html/>
+      <h2>
+        Sous titre
+        <h2 />
+
+        <p>nouvelle phrase</p>
+        <p />
+
+        <html />
+      </h2>
+    </h1>
+  </body>
+</html>
