correction of index.html

--- a/index.html
+++ b/index.html
@@ -1,18 +1,9 @@
 <html>
   <body>
-    <h1>
-      Titre cassé
-      <h1 />
+    <h1>Titre cassé</h1>
 
-      <h2>
-        Sous titre
-        <h2 />
+    <h2>Sous titre</h2>
 
-        <p>nouvelle phrase</p>
-        <p />
-
-        <html />
-      </h2>
-    </h1>
+    <p>nouvelle phrase</p>
   </body>
 </html>
