ajout d'un menu dans index.html

--- a/index.html
+++ b/index.html
@@ -5,5 +5,13 @@
     <h2>Sous titre</h2>
 
     <p>nouvelle phrase</p>
+
+    <ul>
+      <li>menu n°1</li>
+      <li>menu n°1</li>
+      <li>menu n°1</li>
+      <li>menu n°1</li>
+      <li>menu n°1</li>
+    </ul>
   </body>
 </html>
