ajout list unordered dans index.html

--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
     <h2>Sous titre</h2>
 
     <p>nouvelle phrase</p>
+
+    <ol>
+      <li>du text</li>
+      <li>du text</li>
+      <li>du text</li>
+    </ol>
   </body>
 </html>
