--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
       <li>menu n°1</li>
       <li>menu n°1</li>
     </ul>
+
+    <p>du vent</p>
+
+
+    <p>un autre texte</p>
   </body>
 </html>
