creation du form + deletion de lorem ipsum

--- a/index.html
+++ b/index.html
@@ -4,172 +4,14 @@
 
     <h2>Sous titre</h2>
 
-    <p>nouvelle phrase</p>
+    <form>
+      <label>Nom</label>
+      <input type="text" name="name" id="name">
 
-    <ul>
-      <li>menu n°1</li>
-      <li>menu n°1</li>
-      <li>menu n°1</li>
-      <li>menu n°1</li>
-      <li>menu n°1</li>
-    </ul>
+      <label>Prenom</label>
+      <input type="text" name="firstName" id="name">
 
-    <p>du vent</p>
-
-    <p>un autre texte</p>
-
-    <p>
-      <span
-        >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae obcaecati minus suscipit adipisci sunt est sapiente natus maiores facere! Non ipsa at corporis vel consectetur aspernatur quo
-        laborum. Dolores, provident?</span
-      ><span
-        >Iste, natus. Earum repudiandae vel enim pariatur rem quo repellendus voluptatem illum a minus quod, nihil eveniet dolor provident nam possimus architecto facere perferendis nostrum ipsa
-        maxime maiores alias ab.</span
-      ><span
-        >Modi quam hic aliquam tempore autem, est dolore numquam blanditiis earum fuga expedita dolor commodi, dignissimos illum facilis accusamus odio sit suscipit necessitatibus. Porro qui sequi
-        exercitationem consequuntur illo. Iusto!</span
-      ><span
-        >Deleniti exercitationem at inventore consectetur non iure quae molestias illum quis autem possimus eum rem earum officia porro ipsa quia quasi qui placeat veritatis, quaerat quo! Obcaecati
-        voluptate quia deleniti?</span
-      ><span
-        >Voluptatem hic eum quo ex nemo! Reiciendis quod natus, unde quas maxime id necessitatibus soluta enim modi dignissimos labore cupiditate, eaque illum earum delectus et? Quae nisi inventore
-        ipsam dolor!</span
-      ><span
-        >Vitae ullam earum perferendis suscipit nostrum quos omnis fugit eum saepe nobis. Porro corporis odit recusandae nobis delectus, cum magni corrupti. Ex labore placeat sit tenetur totam?
-        Possimus, laudantium sunt.</span
-      ><span
-        >Dolorum, corporis. Et recusandae quasi nisi quo soluta. Excepturi nulla atque architecto laudantium? Vero ex quaerat dolorem fugit unde consectetur aut non autem adipisci, mollitia tempore
-        numquam beatae, voluptatum nulla.</span
-      ><span
-        >Nisi, velit! In amet enim optio. Asperiores nostrum aperiam eos, maiores in optio aspernatur culpa facere accusamus. Reprehenderit quae facilis fugit sapiente possimus quis ducimus inventore
-        quaerat voluptatum, mollitia sunt.</span
-      ><span
-        >Alias in nobis, impedit ex doloremque deserunt ratione consequuntur molestias maxime laborum corporis voluptatibus nulla fuga eaque aliquam. Numquam fugit veniam blanditiis vero, veritatis
-        sed eveniet deleniti odio modi ad?</span
-      ><span
-        >Aspernatur hic odio doloremque animi ab ullam vitae nesciunt magni modi quod sunt cupiditate tenetur reiciendis exercitationem excepturi, minima maxime veritatis dicta ipsam repellat nostrum
-        quasi enim. Reprehenderit, illo minus.</span
-      ><span
-        >Magni velit architecto autem obcaecati repellat omnis numquam reprehenderit sint nemo voluptatibus qui fugit expedita beatae dolor, cumque porro, aut aliquid enim accusantium quaerat quis
-        ratione, culpa ipsum. Nisi, possimus!</span
-      ><span
-        >Vero quasi eligendi vel sed, recusandae asperiores id dolorum veritatis nostrum at in soluta quisquam, architecto expedita pariatur reprehenderit perferendis exercitationem eum sequi odit
-        similique. Blanditiis error laboriosam autem recusandae.</span
-      ><span
-        >Maiores dolore corrupti saepe blanditiis vel veniam minima eos quasi quae? Cupiditate accusamus unde, repellat nam eveniet illum quibusdam a ipsam, accusantium corrupti dolores dolorem culpa
-        totam voluptates distinctio error.</span
-      ><span
-        >Totam reiciendis deleniti molestias at repellendus, non blanditiis quo similique repellat et delectus minima molestiae quisquam veniam. Aliquam impedit doloremque obcaecati quis reiciendis
-        hic, eius ab, repudiandae dignissimos, repellendus blanditiis.</span
-      ><span
-        >Eos obcaecati in id nesciunt beatae ratione mollitia, dignissimos alias ipsam rerum, esse explicabo hic? Voluptas porro tempore vel voluptates laborum. Eligendi deleniti dicta beatae suscipit
-        a illo incidunt atque.</span
-      ><span
-        >Laboriosam provident omnis odit eos vel at neque dignissimos dolor, praesentium, voluptatum voluptatibus ducimus veritatis quos et obcaecati fugit architecto deleniti. Ducimus consequuntur
-        hic quisquam praesentium quaerat nemo, molestias ea!</span
-      ><span
-        >Illo repellendus vel dicta cupiditate, quidem quos quo provident sed tempore? Incidunt eum, aliquid quasi, deleniti maxime, placeat tenetur earum ducimus quibusdam minima impedit nam
-        repudiandae voluptatum odit quos adipisci!</span
-      ><span
-        >Sint possimus accusantium dolorum maiores quam animi. Reprehenderit explicabo tenetur assumenda maxime ipsum ab voluptates natus saepe magni sit. Eos dolore iusto soluta, similique nulla
-        ipsam repellat vel sunt fugit?</span
-      ><span
-        >Fuga vero mollitia neque vel quasi quia saepe, facere repellendus porro amet modi ut. Amet, quibusdam dolor omnis magnam porro esse laborum perferendis laudantium id voluptatum labore, sequi
-        enim reprehenderit!</span
-      ><span
-        >Aliquid accusamus repellendus reiciendis distinctio at, nostrum quam officiis obcaecati dolores nulla, deserunt hic. Fugit esse dolorum alias, sit debitis obcaecati dicta vero mollitia
-        magnam, provident soluta quisquam iste eius?</span
-      ><span
-        >Ex pariatur corporis, laboriosam officiis et minus id tempora quisquam, facilis ullam repudiandae! Sequi, accusantium odio expedita eos doloremque eaque fugit et. Id cupiditate pariatur
-        debitis dolores. Nobis, voluptates cumque!</span
-      ><span
-        >Quo corrupti quod similique culpa dolores cupiditate tenetur voluptatum itaque sed, labore distinctio aut dolor alias esse nisi. Quo repellat, provident dolorem dolore voluptate nostrum. Sint
-        officia quos iure aliquid?</span
-      ><span
-        >Repellendus quam quae quis amet debitis magnam sunt ab nulla quas consequuntur provident deserunt voluptates perspiciatis quo rem pariatur cum eum illo, blanditiis fugiat fugit fuga
-        repudiandae expedita nam! Quaerat!</span
-      ><span
-        >Iusto quod distinctio quam dolorem odit veniam quibusdam ullam similique deserunt doloremque omnis deleniti earum reiciendis in beatae corporis eaque, libero necessitatibus laborum alias rem
-        commodi neque perferendis fugit. Ullam.</span
-      ><span
-        >Recusandae vitae dolores, maxime nulla perspiciatis deleniti nesciunt tempore expedita sequi, itaque hic aut blanditiis similique impedit tenetur! Deserunt beatae praesentium ipsam accusamus
-        accusantium eius voluptatem vitae, molestias optio at.</span
-      ><span
-        >Ipsa consectetur dicta nulla ad, quo voluptatibus tenetur? Inventore est reiciendis ut laborum veritatis maiores iure rem impedit magnam ullam perferendis tempore at beatae, id recusandae
-        mollitia commodi corporis optio!</span
-      ><span
-        >Voluptas molestias delectus consequatur autem odio, distinctio neque sapiente dignissimos, eaque facilis sunt laboriosam eius! Esse cum doloribus nulla excepturi, deleniti necessitatibus
-        dolor culpa? Beatae accusantium aliquid eum architecto delectus?</span
-      ><span
-        >Asperiores, magnam quam, perferendis totam fuga cum eligendi eius eos quod consequatur dolores sed tenetur unde. Nihil quos, iure quidem enim fugiat suscipit ratione laboriosam voluptatem
-        officia dolorum culpa non?</span
-      ><span
-        >Deserunt voluptates voluptatum nulla provident laudantium nesciunt odio illo quod qui dolorum ut facere ratione minima, esse excepturi architecto facilis libero eveniet dolores nostrum quam
-        dicta. Non explicabo laborum architecto!</span
-      ><span
-        >Libero ipsam, minima praesentium rerum explicabo voluptate. Reiciendis, suscipit aut totam, sapiente culpa distinctio perferendis ratione commodi repudiandae hic a quaerat? A, quis deserunt
-        assumenda fugiat labore reprehenderit obcaecati. Repudiandae!</span
-      ><span
-        >Totam nostrum accusantium sunt repellendus voluptate odit ratione architecto possimus distinctio, necessitatibus magni voluptatem provident aperiam ducimus perferendis assumenda tempore
-        delectus quo nobis deleniti repudiandae. Quasi porro atque ipsa. Porro!</span
-      ><span
-        >Error facere porro quae architecto ullam nisi illum, repellat, dolorem est blanditiis impedit saepe repellendus incidunt necessitatibus neque consequuntur distinctio. Deleniti accusamus
-        beatae consequatur illum unde non recusandae sapiente aspernatur.</span
-      ><span
-        >Dolorum, commodi nemo! Unde perferendis provident veritatis delectus sit error ad est optio praesentium, harum eum odio earum, labore quidem aliquam magni. Corporis iste natus unde
-        accusantium cum veniam veritatis!</span
-      ><span
-        >Voluptate reprehenderit repellendus ullam dolor numquam, nihil dicta, fugit maiores commodi delectus nostrum, veritatis eius placeat mollitia. Doloremque modi id possimus iste nobis rerum
-        adipisci? Minima minus repellat doloribus sunt?</span
-      ><span
-        >Pariatur quae perferendis voluptate quia. Labore nam maiores vel a consequuntur laborum ipsum, quam, culpa quibusdam adipisci quae tempore nulla illum consectetur? Harum in quaerat sit
-        eligendi repellendus molestiae tempora?</span
-      ><span
-        >Quaerat maiores, nostrum consectetur veniam excepturi delectus aspernatur repellat accusantium voluptates! Neque vero recusandae minus aut, quia quis, temporibus id ipsum excepturi delectus
-        fugit dolor quos tempore vitae earum voluptas!</span
-      ><span
-        >Non doloremque aliquam, nostrum repudiandae accusamus odit vitae voluptatibus laboriosam? Quisquam pariatur vitae cum illum ad. Atque hic molestias, consectetur animi dolores asperiores,
-        fugit quis, qui architecto nobis quae voluptates.</span
-      ><span
-        >Exercitationem reprehenderit maiores, sapiente optio veritatis nam rem praesentium consequuntur fugiat accusantium facilis dicta iusto temporibus ullam aliquam consectetur! Ipsum architecto
-        provident commodi minus explicabo dolore cumque necessitatibus aliquam iusto.</span
-      ><span
-        >Veritatis voluptatibus, asperiores similique numquam, necessitatibus dignissimos adipisci maiores nemo animi ex deserunt exercitationem hic, nobis assumenda praesentium modi sequi. Ducimus
-        quas cumque maiores inventore ipsa laboriosam rem ratione assumenda!</span
-      ><span
-        >Soluta magnam reiciendis illum obcaecati possimus laboriosam magni cupiditate ut quam ab nulla aliquam, provident error officia. Excepturi placeat ipsum rem, molestias velit perspiciatis
-        numquam facere! Soluta fugiat consequuntur obcaecati?</span
-      ><span
-        >Eos ullam repellendus delectus dolorem aliquam porro dolor, commodi temporibus vel voluptatibus doloremque excepturi deleniti sit sed fugit aliquid fugiat! Quasi fugit alias minus nihil
-        consectetur nam quod, est earum!</span
-      ><span
-        >Ipsam laborum veniam blanditiis corporis beatae itaque quod unde labore assumenda rem dolor veritatis minus, numquam modi sed aliquam repellendus nemo atque obcaecati mollitia sapiente
-        dolorum voluptate sit. Animi, libero?</span
-      ><span
-        >Distinctio consequuntur eum magnam vero incidunt, suscipit optio maxime, ipsam unde dicta qui veritatis dolore neque voluptatibus quos laboriosam nesciunt. Explicabo dolores nihil, cupiditate
-        aliquid perferendis alias optio assumenda corrupti.</span
-      ><span
-        >Animi facilis commodi quis illum officiis dolor voluptatibus itaque aliquid quam. Consectetur sunt, error quidem expedita debitis omnis, velit repellat asperiores saepe odit explicabo,
-        nostrum perferendis tenetur eius fuga voluptas.</span
-      ><span
-        >Labore nobis pariatur voluptate quaerat officia sequi maxime id sunt dolorum cumque. Deleniti eligendi commodi quis ab quidem vero fuga iure nemo deserunt architecto, laborum ullam molestias,
-        facilis temporibus! Ea.</span
-      ><span
-        >Mollitia sit perspiciatis et totam, sint atque laborum maiores, laboriosam culpa, non iure. Assumenda explicabo dignissimos officia impedit delectus aut. Soluta, accusamus dignissimos est
-        ratione molestiae odio? Qui, iusto illo!</span
-      ><span
-        >Tempore, est? Nemo saepe consectetur expedita animi doloremque quibusdam? Odit, cumque asperiores. Voluptate odit molestias sed esse debitis recusandae! Vero repudiandae quam molestias
-        dignissimos illum sunt sequi aspernatur, harum consequatur?</span
-      ><span
-        >Quibusdam libero assumenda eveniet nisi ipsum, aspernatur animi accusantium dolorem distinctio magnam ullam possimus recusandae iure quidem tempore, id necessitatibus! Tenetur hic aliquam
-        illum temporibus, animi repellendus magni quam aspernatur!</span
-      ><span
-        >Atque unde debitis, dicta obcaecati perferendis ad iusto recusandae? Ab numquam laboriosam minus error dolor ipsam officia aut dignissimos eveniet doloremque? Nisi corrupti magnam provident
-        quisquam voluptatem minus hic rem!</span
-      ><span
-        >Hic tenetur laborum aliquid. Aliquid obcaecati, consequatur repudiandae dolor dolores alias unde error veniam provident, impedit odio dolore necessitatibus? Id perspiciatis quod doloribus
-        explicabo quidem quos voluptatibus reprehenderit inventore a.</span
-      >
-    </p>
+      <button>Envoyé</button>
+    </form>
   </body>
 </html>
