--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 
     <h2>Sous titre</h2>
 
-    <form>
+    <form action="back_url">
       <label>Nom</label>
       <input type="text" name="name" id="name">
 
       <label>Prenom</label>
       <input type="text" name="firstName" id="name">
 
-      <button>Envoyé</button>
+      <button type="submit">Envoyé</button>
     </form>
   </body>
 </html>
