1er test des hooks

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       <input type="text" name="firstName" id="name">
 
       <button type="submit">Envoyé</button>
+
+      <p>Nouveau test hooks de git</p>
     </form>
   </body>
 </html>
