ajout de lorem ipsum

--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
 
       <button type="submit">Envoyé</button>
 
-      <p>Nouveau test hooks de git</p>
-      <p>Nouveau test hooks de git</p>
+
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed quam laborum aliquam vitae rerum dolore voluptatum voluptate quis debitis consequatur tempore, similique dolor. Quibusdam, laudantium! Soluta laudantium dignissimos cupiditate maxime?
+        Impedit, nemo itaque sunt inventore voluptatum, nisi aperiam minus quidem explicabo incidunt sint voluptatem aut fuga, a neque unde alias provident. Vel porro libero voluptates illum voluptatem. Iure, quasi. Dolores.
+        Minus, dolorem? Illum rem quaerat, cum aspernatur officia adipisci non rerum ipsam natus repudiandae nihil laboriosam assumenda. Vero accusantium est harum iste similique? A voluptates non repellendus eaque vel ratione.
+        Ab, voluptatum reprehenderit! Quam vitae nihil veritatis. Minus ad distinctio ut explicabo placeat soluta at nulla aspernatur enim necessitatibus aut expedita quisquam non sunt porro, aliquid facilis rem impedit excepturi!
+        Repellendus, quidem. Porro odit iusto nihil aliquam tenetur dolorum dolor tempore voluptates commodi nobis? Ducimus dolore ad voluptatum quaerat fuga perferendis impedit facere culpa rem, omnis, distinctio at adipisci error.
+      </p>
     </form>
 
     <footer>
