ajout du footer

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       <button type="submit">Envoyé</button>
 
       <p>Nouveau test hooks de git</p>
+      <p>Nouveau test hooks de git</p>
     </form>
+
+    <footer>
+      <h6>Footer</h6>
+    </footer>
   </body>
 </html>
