ajout du script

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta description='test de git' />
-  <link />
+  <link  />
 </head>
 
   <body>
@@ -37,5 +37,7 @@
 
       <p>Corporation</p>
     </footer>
+
+    <script></script>
   </body>
 </html>
